--- a/formulaire.html
+++ b/formulaire.html
@@ -12,6 +12,7 @@
             <input type="text" placeholder="Nom">
             <input type="text" placeholder="Prénom">
             <input type="tel" placeholder="tel">
+            <input type="email" placeholder="email">
             <input type="file">
             <input type="submit" value="Envoyer">
  
