--- a/formulaire.html
+++ b/formulaire.html
@@ -8,13 +8,13 @@
       <fieldset>
           <legend>Paiement  </legend>
 
-          <form action="paiement.php" method="POST" >
-            <input type="text" placeholder="Nom">
-            <input type="text" placeholder="Prénom">
-            <input type="tel" placeholder="tel">
-            <input type="email" placeholder="email">
-            <input type="file">
-            <input type="submit" value="Envoyer">
+          <form action="paiement.php" method="POST"  >
+            <input type="text" placeholder="Nom" name="nom">
+            <input type="text" placeholder="Prénom" name="prenom">
+            <input type="tel" placeholder="tel" name="tel">
+            <input type="email" placeholder="email" name="email">
+            <input type="file" name="file">
+            <input type="submit" value="Envoyer" name="submit">
  
         </form>
       </fieldset>
